# ChangeLog for net-misc/dropbear
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  30 Mar 2011; Justin Lecher <jlec@gentoo.org> +metadata.xml:
  metadata.xml added
