@@ -1,18 +1,19 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
-AUX dropbear-0.46-dbscp.patch 500 RMD160 72d7aeee568eae941e3fc45935be1b2bb81f6319 SHA1 f6e78796135988216e1008ba8c5b75de85fe1a49 SHA256 b133670f2417a112e06ae0e4ec7fe50eeb76015e44a5c19d4f55a8df3636ed2d
-AUX dropbear-0.52-fail2ban.patch 1090 RMD160 6f5f1e8b30b11dd4ee92e4d0d5fea5cc479e0c73 SHA1 c19055d7fb2c8d3d92bba959e275e93fac295e68 SHA256 f940d8f980af9de9d8440a49f998ef091bfa563a1f09c62508a68a51a3b750fd
-AUX dropbear.conf.d 190 RMD160 c877b7ead880060ddafe8deaf4cf478dbb33c1b0 SHA1 ade70c7c07a2f16075fd14feeba9c6e11f42a09b SHA256 e891255a49d408eb11514662faa4d724a1df27cc2ee90268507dbd2573b67334
-AUX dropbear.init.d 913 RMD160 be9cd23f061b0773966812b7f48552253c312d35 SHA1 86cca7f1b8a9e591c61c23aa8ed176d6dbbae4ae SHA256 b115e922fa679adca29e24464dd7ffb1a21a0962333d7822a11e0bcea29ea5ed
-DIST dropbear-0.52.tar.bz2 1601843 RMD160 396d06d612bbd2e49f9f2ad6fe17aa51e8ab452a SHA1 8c1745a9b64ffae79f28e25c6fe9a8b96cac86d8 SHA256 8c7b727a4c9066e90a14f7f01c47cab698afb5a854ffa0404da162d4286f04c1
-EBUILD dropbear-0.52-r999.ebuild 2724 RMD160 c1f00cd2bcfc76f20ad1458600cd81f725847ecb SHA1 2dbb34cce3241824f1dc845ed440f1e640523955 SHA256 c480d78b0a3ef7e2978b7f0ebf673fb104ddbd77728b99156a159485028ebed5
-MISC ChangeLog 202 RMD160 1484feb845916f173b874974c3dcdc4cf557f4bd SHA1 cd524eab87dacd65ff7ae452d97cbbf855fded21 SHA256 8d3a5308f6ab558756dea6c69b3cc108bc4b778046f2e107c472f134bb341d28
-MISC metadata.xml 453 RMD160 27143aa2b10a639521ebff9f05a025b7c96ff4a2 SHA1 ef17ddb1c5523f701a7dbfa3276a3580994a4c76 SHA256 5e5f74e19599acc8db15d21ffbb31dd609064e79536adea4b469763866cd6eb2
+AUX dropbear-0.46-dbscp.patch 500 SHA256 b133670f2417a112e06ae0e4ec7fe50eeb76015e44a5c19d4f55a8df3636ed2d SHA512 33596d1b59ba266eade106e8fe058cc9d20d1657db88d51fb11c2111835f7887b3fa5714b3feb9767c48ed94d3af0c539864886e0a2586b6f58a38bb9f741210 WHIRLPOOL d442a66dbbc6aff293ef4b6b358573fe6a08c22cbfc31a02ef8fc9fe0b88e9a80d7f9cf3c1fe3ac6470e922d512054f0543d714e6a1bf07f482e3546e68df045
+AUX dropbear-0.52-fail2ban.patch 1090 SHA256 f940d8f980af9de9d8440a49f998ef091bfa563a1f09c62508a68a51a3b750fd SHA512 8c476f979a2325554d1350549399cb5153cc8024ac1ae6d246d2376f9469c3819b9658e121bfef420916f1e35a47a0729b3ef0c7f3475c8d579648312ec0931b WHIRLPOOL 35a3775ad0a36efb16ddfade277c5571fe3988603ac946a64faa5d7df492cac6e9c90a4c57191e5450046840bfd2668abe63cdb27f3df6285383a26a7b548fc1
+AUX dropbear.conf.d 190 SHA256 e891255a49d408eb11514662faa4d724a1df27cc2ee90268507dbd2573b67334 SHA512 83f2c1eaf7687917a4b2bae7d599d4378c4bd64f9126ba42fc5d235f2b3c9a474d1b3168d70ed64bb4101cc251d30bc9ae20604da9b5d819fcd635ee4d0ebb0f WHIRLPOOL 91db627754119bec23cb22b047741699f732a8f23fef84d35cacc1977dc738e16631f936c36ee9f86dafe0a30962c9583dad44b36b798961668875451106b18b
+AUX dropbear.init.d 913 SHA256 b115e922fa679adca29e24464dd7ffb1a21a0962333d7822a11e0bcea29ea5ed SHA512 82ab77fae3a475afd4b4d1840cb6af8ae5c72f38ef49637bc6822a11e90c7c6c0d8105fb09243ac3a1a75346e8efdd8659fa08228f44e94e998abb7d052c5f7f WHIRLPOOL bbb7dffb37df1051cb8d34b11b4dfdb0b75b31d7d43e5d9e4d4f1c7ed0eb924595fc10f3cc1a26aa41e8fa891ac5485415c66129917d6acca6b3e7963474dd19
+DIST dropbear-0.52.tar.bz2 1601843 SHA256 8c7b727a4c9066e90a14f7f01c47cab698afb5a854ffa0404da162d4286f04c1
+EBUILD dropbear-0.52-r999.ebuild 2408 SHA256 d48a29004b98622ef59d96ef4211828641645bba02469b9f317fd49e3601f49b SHA512 69a2eac22bd5d1fe1b113a1761aeaffa341fed25f929123325918de1ba49ef2984830b6823a137790d68f13e117a3fd14dbd84a5998ac0764fea01d3d9735625 WHIRLPOOL faa6d59e57c6ceae795ea36c2078e1b5d5a7d27ffe79696ef9acd7997b1d2ac421b564af3ca4f86b5866ea3fb81c865c852f6dad943ec342ebaa1ff04fc3bb79
+MISC ChangeLog 350 SHA256 f2f10c32bf3e089ed12f0f84bd87f2f422639ada3fcad77097853204af2029f3 SHA512 c807d7f707a32280b37cae270dcf05cb10438049c2e5ed2ece2eae2589fd255ec2c8bb8248e8e109d08bce41669d0aa05f4f559e9179e7158dadcc948f792c2b WHIRLPOOL 9115c7a9f228da0392fd8e56ae53228419949d6bb123b3267c8c0a18795adaecc0cb42ca7e2441e2c4c60d4094b3640d1406576a7f1ef49e9b28de8f59ca9365
+MISC metadata.xml 430 SHA256 20d35442548755eed38fe56c84597834c6fd765c971bc8e8b9b81f17e8c5aa73 SHA512 b04faf3d04e61d02b319082e5981eaf4e5331024a6707195eb1a97ddb473712a75656f89f67682819734b677b6b1593a4a4d583e4d009b9ffec8c8105d1e51fc WHIRLPOOL d4022cb694ecd40bdcf7e90f683d8feac5b9b9a802c50469f8966428ca5137557a506223e66bf7495c2ffa7926171c5514cbb383900e5ca1569d180113d2b4ab
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
+Comment: GPGTools - http://gpgtools.org
 
-iEYEARECAAYFAk2TKw8ACgkQgAnW8HDreRY41ACdFeipDmXY5DcVei2q02uqGjFy
-9uwAnA5TvHdY0TJsGH0JNkeKEyelBuv+
-=QXFp
+iEYEAREIAAYFAlAngUMACgkQgAnW8HDreRanxACgk87Lx7AFbE0fCIxHIxFjxNc5
+ALEAn3dT2X4hdbLPHLldUmVP5ITh/uWN
+=9b+w
 -----END PGP SIGNATURE-----
