@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-	<herd>no-herd</herd>
 	<maintainer>
 		<email>jlec@j-schmitz.net</email>
 		<name>Justin Lecher (jlec)</name>
@@ -11,8 +10,7 @@
 		<name>Johann Schmitz</name>
 	</maintainer>
 	<use>
-		<flag name='bsdpty'>bsdpty</flag>
-		<flag name='multicall'>multicall</flag>
+		<flag name="bsdpty">bsdpty</flag>
+		<flag name="multicall">multicall</flag>
 	</use>
 </pkgmetadata>
-
