@@ -1,6 +1,10 @@
 # ChangeLog for net-misc/dropbear
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  12 Aug 2012; Justin Lecher <jlec@gentoo.org> dropbear-0.52-r999.ebuild,
+  metadata.xml:
+  Bumped EAPI to 4; add missing inherit from user.eclass
 
   30 Mar 2011; Justin Lecher <jlec@gentoo.org> +metadata.xml:
   metadata.xml added
